fixing alignment on intro

--- a/style.css
+++ b/style.css
@@ -47,12 +47,11 @@ a:visited{
 	color:#484848;
 	font-size: 20px;
 	text-align: center;
-
 	max-width: 800px;
-    margin: auto;
-    font-weight: lighter;
-    line-height: 1.4em;
-    padding-top: 12px;
+	margin: auto;
+	font-weight: lighter;
+	line-height: 1.4em;
+	padding-top: 12px;
 
 }
 #intro a:link{
@@ -66,13 +65,13 @@ a:visited{
 }
 
 .container{
-	max-width: 1400px;
+	max-width: 800px;
 	margin: auto;
     margin-top: 180px;
     background-color: rgba(255, 255, 255, 0.9);
 }
 .projectcontainer{
-	max-width: 1200px;
+	max-width: 800px;
 	padding-left: 100px;
 
 }
